# chemhacktica-infra

./: .gitignore  README.md  TODO.md  Taskfile.yaml  go.mod  go.sum  main.py  pyproject.toml  start-api.sh  start-bot.sh  start-scheduler.sh
cheminfra/: configuration.py  containers.py  containers_test.py  deployment.py
cheminfra/api/: server.py
cheminfra/bot/: botmain.py
cheminfra/db/: bot_commands.py  containers.py
cheminfra/ingest/: containers.py  scheduler.py
deploy/: .gitignore  Taskfile.yaml  deploy.yml
deploy/roles/infra_server/: README.md
docs/: architecture.md
internal/docker/: check_containers.go  check_containers_test.go
internal/health/: check_result.go  expected_containers.go
typings/docker/: auth.pyi  client.pyi  errors.pyi  tls.pyi
typings/docker/api/: build.pyi  client.pyi  config.pyi  container.pyi  daemon.pyi  exec_api.pyi  image.pyi  network.pyi  plugin.pyi  (+4 more)
typings/fire/: __init__.pyi  completion.pyi  completion_test.pyi  core.pyi  core_test.pyi  custom_descriptions.pyi  custom_descriptions_test.pyi  decorators.pyi  decorators_test.pyi  docstrings.pyi  docstrings_fuzz_test.pyi  docstrings_test.pyi  fire_import_test.pyi  fire_test.pyi  formatting.pyi  formatting_test.pyi  formatting_windows.pyi  helptext.pyi  helptext_test.pyi  inspectutils.pyi  inspectutils_test.pyi  interact.pyi  interact_test.pyi  main_test.pyi  parser.pyi  parser_fuzz_test.pyi  parser_test.pyi  testutils.pyi  testutils_test.pyi  trace.pyi  trace_test.pyi  value_types.pyi
ui/: Taskfile.yaml  package.json
ui/public/: index.html
ui/src/: api.ts  index.tsx
(+48 files in other folders)
