[project]
name = "chemhacktica-infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.116.1",
    "fire>=0.7.0",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
]
